--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         ports:
           - 3306:3306
         options: >-
-          --health-cmd="mysqladmin ping --silent"  # Vérifie que MySQL est prêt
+          --health-cmd="mysqladmin ping --silent" 
           --health-interval=10s
           --health-timeout=5s
           --health-retries=3
